re PR target/35921 (Con/de-structor definition fails to override dllimport declaration)

PR target/35921
       * optimize.c (maybe_clone_body): Copy DECL_DLLIMPORT_P flag
       to clone.

From-SVN: r136515